Fri Sep  6 11:48:08 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_getversion): Replace return_both parameter with
	simple_tag.  Change all callers.
	(RCS_gettag): Likewise.
	* rcs.h (RCS_getversion, RCS_gettag): Update declarations.
	* vers_ts.c (Version_TS): Simplify vn_tag initialization using new
	simple_tag rather than old return_both.
	* cvs.h (struct vers_ts): Clarify vn_tag comment a bit.

	* main.c (usg): Only mention -x if ENCRYPTION is defined.
	(main): Mention ENCRYPTION define in comment for -x.
	* client.h (krb_encrypt_buffer_initialize): Only declare if
	ENCRYPTION is defined.
	* client.c (start_server): Only encrypt if ENCRYPTION is defined.
	* server.c (serve_kerberos_encrypt): Only define if ENCRYPTION is
	defined.
	(requests): Only include Kerberos-encrypt is ENCRYPTION is
	defined.
	(krb_encrypt_*): Only define if ENCRYPTION is defined.

Thu Sep  5 17:32:39 1996  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh: When testing remote, use :ext: instead of :server: to
 	match change made earlier today.

Thu Sep  5 13:57:47 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_tcp_server): Don't allow :kserver: to mean
	"direct tcp" (root.c already takes care of this, but I want to
	make it clear what is intended, and not intended, here).
	(start_server): Handle ext_method (external rsh program) and
	server_method (internal rsh client) separately.
	* client.c: Take rsh_pid and start_rsh_server out of
	RSH_NOT_TRANSPARENT ifdefs.  It is useful for things like SSH on NT.
	* cvs.h (CVSmethod), root.c (method_names): Add ext_method.
	* root.c (parse_cvsroot): Recognize "ext" access method.
	If access method is not specified and CVSROOT contains a colon,
	use either ext_method or server_method depending on
	RSH_NOT_TRANSPARENT.

Thu Sep  5 00:09:49 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (RCS_checkout): Remove flags parameter, which was not
	serving any useful purpose.  Change all callers.