@@ -1480,7 +1480,7 @@ remove_file (finfo, tag, message)
     /* check something out.  Generally this is the head.  If we have a
        particular rev, then name it.  */
     retcode = RCS_checkout (finfo->rcs, finfo->file, rev ? corev : NULL,
-			    NULL, RUN_TTY);
+			    (char *) NULL, (char *) NULL, RUN_TTY);
     if (retcode != 0)
     {
 	if (!quiet)
