@@ -448,7 +448,8 @@ patch_fileproc (callerdat, finfo)
     }
     if (vers_tag != NULL)
     {
-	retcode = RCS_checkout (rcsfile, NULL, vers_tag, options, tmpfile1);
+	retcode = RCS_checkout (rcsfile, (char *) NULL, vers_tag,
+				(char *) NULL, options, tmpfile1);
 	if (retcode != 0)
 	{
 	    if (!really_quiet)
@@ -469,7 +470,8 @@ patch_fileproc (callerdat, finfo)
     }
     if (vers_head != NULL)
     {
-	retcode = RCS_checkout (rcsfile, NULL, vers_head, options, tmpfile2);
+	retcode = RCS_checkout (rcsfile, (char *) NULL, vers_head,
+				(char *) NULL, options, tmpfile2);
 	if (retcode != 0)
 	{
 	    if (!really_quiet)
