@@ -106,7 +106,7 @@ char *RCS_getbranch PROTO((RCSNode * rcs, char *tag, int force_tag_match));
 
 int RCS_isdead PROTO((RCSNode *, const char *));
 char *RCS_getexpand PROTO ((RCSNode *));
-int RCS_checkout PROTO ((RCSNode *, char *, char *, char *, char *));
+int RCS_checkout PROTO ((RCSNode *, char *, char *, char *, char *, char *));
 int RCS_settag PROTO ((RCSNode *, const char *, const char *));
 int RCS_deltag PROTO ((RCSNode *, const char *, int));
 int RCS_setbranch PROTO((RCSNode *, const char *));
