@@ -955,7 +955,8 @@ checkout_file (finfo, vers_ts, adding)
 	}
 
 	status = RCS_checkout (vers_ts->srcfile,
-			       pipeout ? NULL : finfo->file, vers_ts->vn_tag,
+			       pipeout ? NULL : finfo->file,
+			       vers_ts->vn_rcs, vers_ts->vn_tag,
 			       vers_ts->options, RUN_TTY);
     }
     if (file_is_dead || status == 0)
@@ -1122,7 +1123,8 @@ patch_file (finfo, vers_ts, docheckout, file_info, checksum)
     if (noexec)
 	retcode = 0;
     else
-	retcode = RCS_checkout (vers_ts->srcfile, NULL, vers_ts->vn_user,
+	retcode = RCS_checkout (vers_ts->srcfile, (char *) NULL,
+				vers_ts->vn_user, (char *) NULL,
 				vers_ts->options, file1);
     if (retcode != 0)
         fail = 1;
@@ -1149,7 +1151,7 @@ patch_file (finfo, vers_ts, docheckout, file_info, checksum)
            out directly into file2 because co doesn't understand how
            to do that.  */
 	retcode = RCS_checkout (vers_ts->srcfile, finfo->file,
-				vers_ts->vn_rcs,
+				vers_ts->vn_rcs, (char *) NULL,
 				vers_ts->options, RUN_TTY);
 	if (retcode != 0)
 	    fail = 1;
@@ -1773,7 +1775,8 @@ join_file (finfo, vers)
 	int retcode;
 	/* The file is up to date.  Need to check out the current contents.  */
 	retcode = RCS_checkout (vers->srcfile, finfo->file,
-				vers->vn_user, NULL, RUN_TTY);
+				vers->vn_user, (char *) NULL,
+				(char *) NULL, RUN_TTY);
 	if (retcode != 0)
 	    error (1, retcode == -1 ? errno : 0,
 		   "failed to check out %s file", finfo->fullname);
