@@ -1,5 +1,9 @@
 Fri Sep  6 11:48:08 1996  Ian Lance Taylor  <ian@cygnus.com>
 
+	* rcs.c (RCS_checkout): Replace tag parameter with rev and nametag
+	parameters.  Change all callers.
+	* rcs.h (RCS_checkout): Update declaration.
+
 	* rcs.c (RCS_getversion): Replace return_both parameter with
 	simple_tag.  Change all callers.
 	(RCS_gettag): Likewise.
